--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,399 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+body {
+	margin: 50px;
+	
+	
+}
+
+.container2 nav {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	flex-wrap: nowrap;
+	text-decoration: none;
+	color: grey;
+	padding-bottom: 50px;
+	font-size: 20px;
+
+}
+.logo1 {
+	width: 28%;
+
+}
+.container2 a {
+	text-decoration: none;
+	color: grey;
+}
+
+.main-header {
+	border-bottom: solid black 2px;
+	display: flex;
+	flex-direction: row;
+	margin-top: 55px;
+	padding-bottom: 55px;
+	justify-content: center;
+	justify-content: space-evenly;
+}
 
 
+.title1-button {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	
+}
+ 
+
+.title1 {
+	font-size: 150px;
+	text-align: center;
+	
+	
+
+}
+
+
+.button {
+	background: white;
+	border: solid black 1px;
+	color: black;
+	align-items: center;
+	text-decoration: none;
+	justify-content: center;
+	display: flex;
+	width: 250px;
+	height: 75px;
+	font-size: 23px;
+	transition-duration: .7s;
+	margin-left: 180px;
+	
+}
+.button:hover {
+	background-color: lightgrey;
+
+}
+
+
+
+
+.top-body  {
+	display: flex;
+
+	justify-content: space-around;
+}
+
+.top-body h4 {
+	margin-top: 50px;
+	padding-bottom: 15px;
+	font-size: 37px;
+	
+}
+
+.top-body p {
+	width: 75%;
+	font-size: 27px;
+	padding-bottom: 55px;
+		
+}
+
+.middle-img {
+	width: 100%;
+	height: 400px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+.bottom-body  {
+	display: flex;
+	border-bottom: solid black 2px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	justify-content: space-around;
+	
+}
+
+.bottom-body h4 {
+	padding-bottom: 35px;
+	font-size: 37px;
+	
+}
+
+.bottom-body p {
+	width: 80%;
+	font-size: 27px;
+	padding-bottom: 35px;
+		
+}
+.contact h4 {
+	padding-bottom: 15px;
+	font-size: 37px;
+}
+ .contact {
+	display: flex;
+	flex-direction: column;
+	padding: 25px;
+	flex-wrap: nowrap;
+	width: 75%;
+	font-size: 27px;
+	padding-bottom: 55px;
+	justify-content: space-between;
+}
+
+.copyright {
+	text-align: center;
+	font-size: 25px;
+}
+
+/* Begin CSS for services */
+
+.services-container1 {
+width: 100%;
+margin: auto;
+}
+
+.services-container2 {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	padding: 65px;
+	
+	margin-bottom: 50px;
+	
+}
+
+.services-container2 a {
+	text-decoration: none;
+	color: grey;
+	font-size: 25px;
+	justify-content: center;
+	
+	
+}
+
+.services-container2 img {
+	height: 50px;
+	
+	
+}
+
+.services-mainbody {
+display: flex;
+flex-direction: row;
+align-content: space-between;
+padding-bottom: 25px;
+padding-top: 50px;
+border-top: solid black 2px;
+border-bottom: solid black 2px;
+}
+
+.services-services h4 {
+	padding-top: 45px;
+	font-size: 70px;
+}
+
+.services-services p {
+	font-size: 30px;
+	padding-bottom: 50px;
+}
+.services-facts h4 {
+	font-size: 70px;
+
+}
+
+.services-facts p {
+	font-size: 30px;
+	width: 50%;
+}
+
+
+.services-box {
+	border: solid black 2px;
+	padding: 50px;
+	background-color: lightgrey;
+	margin: 50px 50px 100px 50px;
+}
+.services-topbody h4 {
+	
+	font-size: 70px;
+	
+	
+}
+
+.services-topbody p {
+	font-size: 30px;
+	
+		
+}
+
+.services-topimg {
+	width: 100%;
+	height: 350px;
+	padding-top: 25px;
+}
+
+
+.services-bottombody h4 {
+	font-size: 70px;
+	
+}
+
+.services-bottombody p {
+	font-size: 30px;	
+}
+
+.services-facts {
+	width: 100%;
+	padding-top: 50px;
+}
+.services-infoimg {
+	height: 700px;
+	width: 700px;
+	padding-top: 50px;
+	padding-right: 100px;
+
+	
+}
+
+.services-button {
+	background: white;
+	border: solid black 1px;
+	color: black;
+	align-items: center;
+	text-decoration: none;
+	justify-content: center;
+	display: flex;
+	width: 250px;
+	height: 75px;
+	font-size: 23px;
+	transition-duration: .7s;
+	
+	
+}
+
+ul {
+	padding-top: 60px;
+	padding-bottom: 100px;
+	padding-left: 100px;
+	list-style: square outside none;
+	font-size: 30px;
+}
+
+.services-bottom {
+	display: flex;
+	
+}
+
+.services-copyright {
+	text-align: center;
+	font-size: 20px;
+}
+
+.container {
+    width: 2000px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  @media(max-width: 800px) {
+    .container {
+      width: 500px;
+    }
+  
+    .container header nav {
+      display: flex;
+      flex-direction: column-reverse;
+      
+      
+    }
+
+    .container header nav a {
+        border-bottom: solid lightgrey 1px;
+        padding-bottom: 25px;
+    }
+  
+    .container header nav img {
+        padding-bottom: 25px;
+        
+    }
+    .container header nav a {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .main-header img {
+        display: none;
+    }
+
+    .top-body {
+        flex-direction: column;
+    }
+    .bottom-body {
+        flex-direction: column;
+    }
+  }
